# optimize

./: .gitignore  README.md  pyproject.toml
examples/: classifier.py  iris.py  newton.py
src/optimize/: __init__.py
src/optimize/core/: functional.py  layer.py  mode.py  module.py  tensor.py
src/optimize/utils/: optimizer.py
