[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimize"
version = "0.0.1"
authors = [
    {name = "Raymond Jow"}
]
description = ""
readme = "README.md"
requires-python = ">=3"
dependencies = [
    "numpy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "argparse"
]

